-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
13139
Then cause the dump output via /proc interface incomplete and bad formatted. Such as:
# cat /proc/fs/lustre/mdd/lustre-MDT0000/lfsck_layout name: lfsck_layout magic: 0xb173ae14 version: 2 status: completed flags: param: all_targets,time_since_last_completed: 460 seconds time_since_latest_start: 460 seconds time_since_last_checkpoint: 460 seconds latest_start_position: 0 last_checkpoint_position: 25096 first_failure_position: 0 success_count: 1 repaired_dangling: 0 repaired_unmatched_pair: 0 repaired_multiple_referenced: 0 repaired_orphan: 0 repaired_inconsistent_owner: 0 repaired_others: 0 skipped: 0 failed_phase1: 0 failed_phase2: 0 checked_phase1: 8 checked_phase2: 0 run_time_phase1: 0 seconds run_time_phase2: 0 seconds average_speed_phase1: 8 items/sec average_speed_phase2: 0 objs/sec real-time_speed_phase1: N/A real-time_speed_phase2: N/A current_position: N/A